--- a/Final/cart.html
+++ b/Final/cart.html
@@ -20,7 +20,7 @@
   <title>CUROLOGY</title>
 </head>
 
-<body>
+<body style="background-color:white;">
   <!-- Navbar  -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <!-- Logo  -->
@@ -62,8 +62,6 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2>My Cart</h2>
-                        <hr>
                     </div>
                 </div>
 
