--- a/Final/contact.html
+++ b/Final/contact.html
@@ -35,7 +35,7 @@
               <a class="nav-item nav-link" href="https://jwetterdal.github.io/Web_design_3/Final/index.html"><strong>HOME</strong></span></a>
               <a class="nav-item nav-link" href="https://jwetterdal.github.io/Web_design_3/Final/shop.html"><strong>SHOP</strong></a>
               <a class="nav-item nav-link" href="https://jwetterdal.github.io/Web_design_3/Final/learn.html"><strong>LEARN</strong></a>
-              <a class="nav-item nav-link active" href="https://jwetterdal.github.io/Web_design_3/Final/contact.html"><strong>contact</strong></a>
+              <a class="nav-item nav-link active" href="https://jwetterdal.github.io/Web_design_3/Final/contact.html"><strong>CONTACT</strong></a>
               <a class="nav-link" href="cart.html"><button type="button" class="btn btn-sm btn-outline-light"><i
                   class="fa fa-shopping-cart"></i> Cart <span class="count">0</span></button></a>
             </div>
@@ -52,6 +52,74 @@
  
 <main>
 
+    <div class="jumbotron jumbotron-fluid jumbotron">
+        <div class="container text-light text-center p-5 mt-5">
+          <h1 class="mt-5 mission text-light"><b>My Chart.</b></h1>
+        </div>
+      </div>
+
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-12 col-md-5 text-sm-center text-md-left">
+        <h1 class="mb-5">Contact us</h1>
+        <p class="lead mt-3 mb-3"><a
+            href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3334969.4612168144!2d-122.05925457953283!3d35.28594651477869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80858098c1373343%3A0x6a87834dac25b8d1!2sCurology%2C%20Inc.!5e0!3m2!1sen!2sus!4v1607982647868!5m2!1sen!2sus"
+            target="_blank" class="text-dark">
+            <u>353 Sacramento St<br>
+              San Francisco, CA 94111</a></u>
+        </p>
+ 
+        <p class="lead mt-3 mb-3"><a href="mailto:support@curology.com"
+            class="text-dark"><u>support@curology.com</u></a>
+        </p>
+
+        <div class="row mt-5 mb-5 pb-5 text-md-left">
+          <div class="col-4">
+          <a href="#">
+                <i class="fa fa-twitter" style="font-size: 1.5rem; color:#6FBF83;"></i>
+              </a>
+          </div>
+          <div class="col-4">
+          <a href="#">
+                <i class="fa fa-facebook" style="font-size: 1.5rem; color:#F26E22;"></i>
+              </a>
+          </div>
+          <div class="col-4">
+          <a href="#">
+                <i class="fa fa-instagram" style="font-size: 1.5rem; color:#D91A73;"></i>
+              </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-7">
+        <form action="" method="POST" enctype="multipart/form-data" class="needs-validation" novalidate>
+          <div class="form-group pr-5 pl-5">
+            <label for="validationCustom01">First Name</label>
+            <input type="text" class="form-control" id="validationCustom01" required>
+          </div>
+          <div class="form-group pr-5 pl-5">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          </div>
+          <div class="form-group pr-5 pl-5">
+            <label for="formGroupExampleInput">Subject</label>
+            <input type="text" class="form-control" id="formGroupExampleInput" required>
+          </div>
+          <div class="form-group pr-5 pl-5">
+            <label for="exampleFormControlTextarea1">Message</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <button type="submit" class="btn  btn-block btn-color mt-5 mb-0"><b>SEND</b></button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid pt-5 p-0">
+
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3334969.4612168144!2d-122.05925457953283!3d35.28594651477869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80858098c1373343%3A0x6a87834dac25b8d1!2sCurology%2C%20Inc.!5e0!3m2!1sen!2sus!4v1607982647868!5m2!1sen!2sus" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+
+  </div>
         
             
  </main>
