--- a/Final/contact.html
+++ b/Final/contact.html
@@ -20,9 +20,9 @@
   <title>CUROLOGY</title>
 </head>
 
-<body>
+<body style="background-color:white;">
   <!-- Navbar  -->
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color:#cec2ea;">
     <!-- Logo  -->
     <a class="navbar-brand" href="index.html">CUROLOGY</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -52,9 +52,8 @@
  
 <main>
 
-    <div class="jumbotron jumbotron-fluid jumbotron">
+    <div class="jumbotron-3 jumbotron-fluid jumbotron-3">
         <div class="container text-light text-center p-5 mt-5">
-          <h1 class="mt-5 mission text-light"><b>My Chart.</b></h1>
         </div>
       </div>
 
@@ -76,17 +75,17 @@
         <div class="row mt-5 mb-5 pb-5 text-md-left">
           <div class="col-4">
           <a href="#">
-                <i class="fa fa-twitter" style="font-size: 1.5rem; color:#6FBF83;"></i>
+                <i class="fa fa-twitter" style="font-size: 1.5rem; color:#3c2f70;"></i>
               </a>
           </div>
           <div class="col-4">
           <a href="#">
-                <i class="fa fa-facebook" style="font-size: 1.5rem; color:#F26E22;"></i>
+                <i class="fa fa-facebook" style="font-size: 1.5rem; color:#3c2f70;"></i>
               </a>
           </div>
           <div class="col-4">
           <a href="#">
-                <i class="fa fa-instagram" style="font-size: 1.5rem; color:#D91A73;"></i>
+                <i class="fa fa-instagram" style="font-size: 1.5rem; color:#3c2f70;"></i>
               </a>
           </div>
         </div>
