--- a/Final/cart.html
+++ b/Final/cart.html
@@ -54,7 +54,7 @@
 
         <div class="jumbotron jumbotron-fluid jumbotron">
           <div class="container text-light text-center p-5 mt-5">
-            <h1 class="mt-5 mission text-light"><b>My Chart.</b></h1>
+            <h1 class="mt-5 mission text-light"><b>My Cart.</b></h1>
           </div>
         </div>
     
