--- a/Final/cart.html
+++ b/Final/cart.html
@@ -69,7 +69,7 @@
                     <div class="col-12 col-sm-8">
                         <div class="cartItem row align-items-start">
                             <div class="col-3 mb-2">
-                                <img class="w-100" src="product/foam1.png" alt="rug">
+                                <img class="w-100" src="product/foam1.png" alt="foam">
                             </div>
                             <div class="col-5 mb-2">
                                 <h4>Theia Rug</h4>
@@ -85,7 +85,7 @@
 
                         <div class="cartItem row align-items-start mt-5">
                             <div class="col-3 mb-2">
-                                <img class="w-100" src="product/kit1.jpg" alt="rug">
+                                <img class="w-100" src="product/kit1.jpg" alt="kit">
                             </div>
                             <div class="col-5 mb-2">
                                 <h4>Colorful Melt</h4>
