--- a/Final/checkout.html
+++ b/Final/checkout.html
@@ -15,12 +15,12 @@
 
   <!-- Styles -->
   <link href="style.css" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="product.css">
+ 
 
   <title>CUROLOGY</title>
 </head>
 
-<body>
+<body style="background-image: url(water.mp4)">
   <!-- Navbar  -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <!-- Logo  -->
@@ -49,7 +49,12 @@
   </nav>
 
    <!-- Main content -->
-
+   
+ 
+          <div class="video-overlay">CHECKOUT.</div>
+    
+  </div>
+  
   <main>
         <div class="container bg-white">
                 <div class="holder mt-5 mb-5">
@@ -65,7 +70,7 @@
                 <form action="" method="get" name="checkout" autocomplete="on" class="needs-validation mb-5"
                     novalidate>
                     <!--Shipping-->
-                    <h4>Shipping</h4>
+                    <h1>Shipping</h1>
                     <!--name-->
                     <div class="form-row">
                         <!--first name-->
@@ -159,7 +164,7 @@
 
 
 
-                    <h4 class="mt-3 mb-3">Billing</h4>
+                    <h1 class="mt-3 mb-3">Billing</h1>
                     <label for="checkbox">
                         <input type="checkbox" id="checkbox" class="mb-4" /> Shipping and billing address the same?
                     </label>
@@ -257,7 +262,7 @@
                     <!-- end .hide -->
 
                     <!--PAYMENT GROUP-->
-                    <h4 class="mt-3">Payment</h4>
+                    <h1 class="mt-3">Payment</h1>
                     <div class="form-row">
                         <div class="form-group col-md-12">
                             <label class="name" for="creditCardName">Name (as it appears on your
@@ -294,22 +299,22 @@
                     <!--END PAYMENT-->
             </div>
             <div class="col-md-4">
-                <h2>Order Summary</h2>
+                <h1>Order Summary</h1>
                 <hr>
                 <div class="row m-0">
                     <div class="col-sm-8 p-0 ">
-                        <h6>Subtotal</h6>
+                        <h4>Subtotal</h4>
                     </div>
                     <div class="col-sm-4 p-0">
-                        <p id="subtotal">$66.00</p>
+                        <p id="subtotal"><h6>$66.00</h6></p>
                     </div>
                 </div>
                 <div class="row m-0">
                     <div class="col-sm-8 p-0 ">
-                        <h6>Tax</h6>
+                        <h4>Tax</h4>
                     </div>
                     <div class="col-sm-4 p-0">
-                        <p id="tax">$5.94</p>
+                        <p id="tax"><h6>$5.94</h6></p>
                     </div>
                 </div>
                 <hr>
@@ -318,7 +323,7 @@
                         <p class="lead"><b>Total</b></h5>
                     </div>
                     <div class="col-sm-4 p-0">
-                        <p id="total" class="lead"><b>$71.94</b></p>
+                        <p id="total" class="lead"><h6>$71.94</h6></p>
                     </div>
                 </div>
 
