--- a/Final/cart.html
+++ b/Final/cart.html
@@ -37,7 +37,7 @@
               <a class="nav-item nav-link" href="https://jwetterdal.github.io/Web_design_3/Final/learn.html"><strong>LEARN</strong></a>
               <a class="nav-item nav-link" href="https://jwetterdal.github.io/Web_design_3/Final/contact.html"><strong>CONTACT</strong></a>
               <a class="nav-link" href="cart.html"><button type="button" class="btn btn-sm btn-outline-light"><i
-                  class="fa fa-shopping-cart"></i> Cart <span class="count">0</span></button></a>
+                  class="fa fa-shopping-cart"></i> CART <span class="count">0</span></button></a>
             </div>
       <!-- Social Media Icons  -->
       <ul class="nav navbar-nav navbar-right">
