--- a/Final/index.html
+++ b/Final/index.html
@@ -119,7 +119,7 @@
                     </a>
                   </div>
                   <div class="col-md-4 text-center p-3">
-                    <a href=""><img src="news3.png" class="img-fluid" alt="hydrate">
+                    <a href="https://jwetterdal.github.io/Web_design_3/Final/moiz.html"><img src="news3.png" class="img-fluid" alt="hydrate">
                       <h4 class="mb-1 mt-3">You Gotta Hydrate!</h4>
                       <h6 class="text-muted mt-3">Price $22</h6>
                     </a>
