fixed navbar color

--- a/Final/contact.html
+++ b/Final/contact.html
@@ -22,7 +22,7 @@
 
 <body style="background-color:white;">
   <!-- Navbar  -->
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color:#cec2ea;">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color:#3c2f70;">
     <!-- Logo  -->
     <a class="navbar-brand" href="index.html">CUROLOGY</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
