--- a/Final/cart.html
+++ b/Final/cart.html
@@ -158,6 +158,21 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
   <script src="script.js"></script>
+  <script>
+
+      $(document).ready(function(){
+        $(window).scroll(function(){
+          var scroll = $(window).scrollTop();
+          if (scroll > 300) {
+            $(".navbar.navbar-expand-md.navbar-dark.fixed-top").css("background" , "#3c2f70");
+          }
+      
+          else{
+            $(".navbar.navbar-expand-md.navbar-dark.fixed-top").css("background" , "transparent");  	
+          }
+        })
+      })
+          </script>
 </body>
 
 </html>
